cvdParser.py
# Generated from cvd.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cvdParser ( Parser ):

    grammarFileName = "cvd.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'param'", "'runtime'", "'='", "';'", 
                     "'var'", "'layer'", "'{'", "'}'", "'step'", "'=>'", 
                     "'flow'", "'until'", "'=='", "'!='", "'>='", "'<='", 
                     "'>'", "'<'", "'.'", "'^'", "'*'", "'/'", "'+'", "'-'", 
                     "'!'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "IDENT", "STRING", 
                      "NUMBER", "WS" ]

    RULE_script = 0
    RULE_statement = 1
    RULE_paramDecl = 2
    RULE_varDecl = 3
    RULE_layerDecl = 4
    RULE_layerBody = 5
    RULE_stepDecl = 6
    RULE_stepBody = 7
    RULE_assignment = 8
    RULE_flowFollow = 9
    RULE_untilStmt = 10
    RULE_conditionExpr = 11
    RULE_compOp = 12
    RULE_lvalue = 13
    RULE_dottedName = 14
    RULE_expr = 15
    RULE_comment = 16

    ruleNames =  [ "script", "statement", "paramDecl", "varDecl", "layerDecl", 
                   "layerBody", "stepDecl", "stepBody", "assignment", "flowFollow", 
                   "untilStmt", "conditionExpr", "compOp", "lvalue", "dottedName", 
                   "expr", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    LINE_COMMENT=28
    BLOCK_COMMENT=29
    IDENT=30
    STRING=31
    NUMBER=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cvdParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.StatementContext)
            else:
                return self.getTypedRuleContext(cvdParser.StatementContext,i)


        def getRuleIndex(self):
            return cvdParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = cvdParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 805310562) != 0):
                self.state = 34
                self.statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(cvdParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDecl(self):
            return self.getTypedRuleContext(cvdParser.ParamDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(cvdParser.VarDeclContext,0)


        def layerDecl(self):
            return self.getTypedRuleContext(cvdParser.LayerDeclContext,0)


        def untilStmt(self):
            return self.getTypedRuleContext(cvdParser.UntilStmtContext,0)


        def comment(self):
            return self.getTypedRuleContext(cvdParser.CommentContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = cvdParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.paramDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.varDecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.layerDecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.untilStmt()
                pass
            elif token in [28, 29]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(cvdParser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(cvdParser.ExprContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_paramDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDecl" ):
                listener.enterParamDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDecl" ):
                listener.exitParamDecl(self)




    def paramDecl(self):

        localctx = cvdParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(cvdParser.T__0)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 50
                self.match(cvdParser.T__1)


            self.state = 53
            self.match(cvdParser.IDENT)
            self.state = 54
            self.match(cvdParser.T__2)
            self.state = 55
            self.expr(0)
            self.state = 56
            self.match(cvdParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(cvdParser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(cvdParser.ExprContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = cvdParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(cvdParser.T__4)
            self.state = 59
            self.match(cvdParser.IDENT)
            self.state = 60
            self.match(cvdParser.T__2)
            self.state = 61
            self.expr(0)
            self.state = 62
            self.match(cvdParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def layerBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.LayerBodyContext)
            else:
                return self.getTypedRuleContext(cvdParser.LayerBodyContext,i)


        def getRuleIndex(self):
            return cvdParser.RULE_layerDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayerDecl" ):
                listener.enterLayerDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayerDecl" ):
                listener.exitLayerDecl(self)




    def layerDecl(self):

        localctx = cvdParser.LayerDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_layerDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(cvdParser.T__5)
            self.state = 65
            self.match(cvdParser.T__6)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 805310976) != 0):
                self.state = 66
                self.layerBody()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(cvdParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stepDecl(self):
            return self.getTypedRuleContext(cvdParser.StepDeclContext,0)


        def untilStmt(self):
            return self.getTypedRuleContext(cvdParser.UntilStmtContext,0)


        def comment(self):
            return self.getTypedRuleContext(cvdParser.CommentContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_layerBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayerBody" ):
                listener.enterLayerBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayerBody" ):
                listener.exitLayerBody(self)




    def layerBody(self):

        localctx = cvdParser.LayerBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_layerBody)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.stepDecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.untilStmt()
                pass
            elif token in [28, 29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(cvdParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(cvdParser.NUMBER, 0)

        def stepBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.StepBodyContext)
            else:
                return self.getTypedRuleContext(cvdParser.StepBodyContext,i)


        def getRuleIndex(self):
            return cvdParser.RULE_stepDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepDecl" ):
                listener.enterStepDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepDecl" ):
                listener.exitStepDecl(self)




    def stepDecl(self):

        localctx = cvdParser.StepDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stepDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(cvdParser.T__8)
            self.state = 80
            self.match(cvdParser.STRING)
            self.state = 81
            self.match(cvdParser.NUMBER)
            self.state = 82
            self.match(cvdParser.T__6)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1879048192) != 0):
                self.state = 83
                self.stepBody()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(cvdParser.T__7)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 90
                self.match(cvdParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(cvdParser.AssignmentContext,0)


        def flowFollow(self):
            return self.getTypedRuleContext(cvdParser.FlowFollowContext,0)


        def comment(self):
            return self.getTypedRuleContext(cvdParser.CommentContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_stepBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepBody" ):
                listener.enterStepBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepBody" ):
                listener.exitStepBody(self)




    def stepBody(self):

        localctx = cvdParser.StepBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stepBody)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.flowFollow()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.comment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(cvdParser.LvalueContext,0)


        def expr(self):
            return self.getTypedRuleContext(cvdParser.ExprContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = cvdParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.lvalue()
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==3 or _la==10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 100
            self.expr(0)
            self.state = 101
            self.match(cvdParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlowFollowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dottedName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.DottedNameContext)
            else:
                return self.getTypedRuleContext(cvdParser.DottedNameContext,i)


        def getRuleIndex(self):
            return cvdParser.RULE_flowFollow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlowFollow" ):
                listener.enterFlowFollow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlowFollow" ):
                listener.exitFlowFollow(self)




    def flowFollow(self):

        localctx = cvdParser.FlowFollowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_flowFollow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.dottedName()
            self.state = 104
            self.match(cvdParser.T__10)
            self.state = 105
            self.dottedName()
            self.state = 106
            self.match(cvdParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntilStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionExpr(self):
            return self.getTypedRuleContext(cvdParser.ConditionExprContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_untilStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntilStmt" ):
                listener.enterUntilStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntilStmt" ):
                listener.exitUntilStmt(self)




    def untilStmt(self):

        localctx = cvdParser.UntilStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_untilStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(cvdParser.T__11)
            self.state = 109
            self.conditionExpr()
            self.state = 110
            self.match(cvdParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.ExprContext)
            else:
                return self.getTypedRuleContext(cvdParser.ExprContext,i)


        def compOp(self):
            return self.getTypedRuleContext(cvdParser.CompOpContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_conditionExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionExpr" ):
                listener.enterConditionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionExpr" ):
                listener.exitConditionExpr(self)




    def conditionExpr(self):

        localctx = cvdParser.ConditionExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_conditionExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.expr(0)
            self.state = 113
            self.compOp()
            self.state = 114
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cvdParser.RULE_compOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompOp" ):
                listener.enterCompOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompOp" ):
                listener.exitCompOp(self)




    def compOp(self):

        localctx = cvdParser.CompOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dottedName(self):
            return self.getTypedRuleContext(cvdParser.DottedNameContext,0)


        def getRuleIndex(self):
            return cvdParser.RULE_lvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLvalue" ):
                listener.enterLvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLvalue" ):
                listener.exitLvalue(self)




    def lvalue(self):

        localctx = cvdParser.LvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_lvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.dottedName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DottedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(cvdParser.IDENT)
            else:
                return self.getToken(cvdParser.IDENT, i)

        def getRuleIndex(self):
            return cvdParser.RULE_dottedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDottedName" ):
                listener.enterDottedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDottedName" ):
                listener.exitDottedName(self)




    def dottedName(self):

        localctx = cvdParser.DottedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_dottedName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(cvdParser.IDENT)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 121
                    self.match(cvdParser.T__18)
                    self.state = 122
                    self.match(cvdParser.IDENT) 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cvdParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(cvdParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)


    class PowerExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.ExprContext)
            else:
                return self.getTypedRuleContext(cvdParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowerExpr" ):
                listener.enterPowerExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowerExpr" ):
                listener.exitPowerExpr(self)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.ExprContext)
            else:
                return self.getTypedRuleContext(cvdParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(cvdParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)


    class DottedNameExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def dottedName(self):
            return self.getTypedRuleContext(cvdParser.DottedNameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDottedNameExpr" ):
                listener.enterDottedNameExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDottedNameExpr" ):
                listener.exitDottedNameExpr(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cvdParser.ExprContext)
            else:
                return self.getTypedRuleContext(cvdParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cvdParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(cvdParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = cvdParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 30
        self.enterRecursionRule(localctx, 30, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                localctx = cvdParser.NotExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 129
                self.match(cvdParser.T__24)
                self.state = 130
                self.expr(4)
                pass
            elif token in [26]:
                localctx = cvdParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 131
                self.match(cvdParser.T__25)
                self.state = 132
                self.expr(0)
                self.state = 133
                self.match(cvdParser.T__26)
                pass
            elif token in [32]:
                localctx = cvdParser.NumberExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 135
                self.match(cvdParser.NUMBER)
                pass
            elif token in [30]:
                localctx = cvdParser.DottedNameExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 136
                self.dottedName()
                pass
            else:
                raise NoViableAltException(self)
